# openhpsdr-zeus

./: .gitattributes  .gitignore  .mailmap  AGENTS.md  ATTRIBUTIONS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  CONTRIBUTING.md  Directory.Build.props  LICENSE  README.md  Zeus.slnx  ach2ur6dfkun3qrk5mnkgjvgaferkijc  itkadoep9kljboeaivnlc7dc04mnohpo  jptvfape31rc0s6dlosivdjsghsvgrhe  manifest
.beads/: README.md  config.yaml  interactions.jsonl  issues.jsonl
.claude/: settings.json
.githooks/: commit-msg  pre-commit  pre-push
OpenhpsdrZeus/: OpenhpsdrZeus.csproj  Program.cs  StartupDiagnostics.cs  SupportSidecarLauncher.cs
Zeus.Contracts/: AlertFrame.cs  AudioChainHealthFrame.cs  AudioFrame.cs  BandPlanDtos.cs  BoardCapabilities.cs  CatDtos.cs  ChatDtos.cs  ChatEventFrame.cs  CwDecodedTextFrame.cs  CwEngineStatus.cs  CwEngineStatusFrame.cs  DiagnosticsV2Dtos.cs  DisplayFrame.cs  Dtos.cs  DxClusterDtos.cs  FilterFrame.cs  FreeDvDtos.cs  Ft8DecodeFrame.cs  Ft8Settings.cs  Ft8TxStatusFrame.cs  HpsdrBoardKind.cs  LogDtos.cs  MicPeakFrame.cs  MidiDtos.cs  MoxSource.cs  MoxStateFrame.cs  MsgType.cs  OperatorIdentity.cs  OrionMkIIVariant.cs  PaTempFrame.cs  PsMetersFrame.cs  PttStatusFrame.cs  QrzDtos.cs  RadioCalibration.cs  RotctldDtos.cs  RxAudioChainOrderFrame.cs  RxMeterFrame.cs  RxMetersV2Frame.cs  SpaceWeatherDtos.cs  SpotListFrame.cs  (+11 more)
Zeus.Diagnostics.TestGen/: DiagnosticsTestGenerator.cs  Zeus.Diagnostics.TestGen.csproj
Zeus.Dsp/: DspEngineFactory.cs  IDspEngine.cs  PsStageMeters.cs  RxStageMeters.cs  SyntheticDspEngine.cs  TxStageMeters.cs
Zeus.Dsp.FreeDv/: FreeDvAutoScanner.cs  FreeDvGates.cs  FreeDvModem.cs  FreeDvNativeLoader.cs  FreeDvNativeMethods.cs  FreeDvResampler.cs  RadeModem.cs  RadeNativeMethods.cs  RadeResampler.cs  Zeus.Dsp.FreeDv.csproj
Zeus.Dsp.Ft8/: CallsignCountryResolver.cs  Ft8Decoder.cs  Ft8MessageParse.cs  Ft8NativeLoader.cs  Ft8NativeMethods.cs  Ft8Resampler.cs  Ft8SlotAccumulator.cs  Ft8Synth.cs  WsprDecoder.cs  WsprNativeMethods.cs  Zeus.Dsp.Ft8.csproj
Zeus.Midi/: DryWetMidiEngine.cs  HidStreamDeckEngine.cs  IMidiEngine.cs  IStreamDeckEngine.cs  NullMidiEngine.cs  NullStreamDeckEngine.cs  Zeus.Midi.csproj
Zeus.Plugins.Contracts/: PluginManifest.cs  Zeus.Plugins.Contracts.csproj
Zeus.Plugins.Host/: AuComponentScanService.cs  PluginEndpoints.cs  PluginManager.cs  PluginSettingsStore.cs  ServiceCollectionExtensions.cs  SharedLiteDatabase.cs  VstDirectoryScanService.cs  Zeus.Plugins.Host.csproj
Zeus.Protocol1/: AssemblyInfo.cs  ControlFrame.cs  HpsdrEnums.cs  IProtocol1Client.cs  IRadioTransport.cs  IRxAudioSource.cs  IRxPacketSink.cs  ITxIqSource.cs  IqFrame.cs  N2adrBands.cs  PacketParser.cs  Protocol1Client.cs  PsFeedbackFrame.cs  RealtimeThreadPriority.cs  RxAudioRing.cs  TestToneGenerator.cs  TxIqRing.cs  Zeus.Protocol1.csproj
Zeus.Protocol2/: AssemblyInfo.cs  CwKeyerWireConfig.cs  DiagStats.cs  IRxPacketSink.cs  IqFrame.cs  P2TelemetryReading.cs  Protocol2Client.cs  PsFeedbackFrame.cs  RealtimeThreadPriority.cs
Zeus.Server/: Program.cs  Zeus.Server.csproj
Zeus.Server.Hosting/: ActivationSpotsService.cs  AdifParser.cs  AntennaSettingsStore.cs  AppRestartService.cs  AudioChainHealthService.cs  AudioChainSettingsStore.cs  AudioDeviceSettingsStore.cs  AudioPluginBridge.cs  AudioProcessingModeService.cs  AudioProcessingModeStore.cs  AudioProfileStore.cs  AudioResumeProbe.cs  AudioSettingsStore.cs  BandMemoryStore.cs  BandPlanService.cs  BandPlanStore.cs  BandPrefsStore.cs  BandUtils.cs  BoardCapabilitiesTable.cs  BottomPinStore.cs  CapabilitiesService.cs  CatConfigStore.cs  CatManagementService.cs  CatSerialConfigStore.cs  CfcPresetStore.cs  ChainOrderService.cs  ChainOrderStore.cs  ChatEnabledStore.cs  ChatService.cs  ChatSupport.cs  CredentialStore.cs  CwAudioDecoder.cs  CwDecoderService.cs  CwEngine.cs  CwOffset.cs  CwSettingsStore.cs  CwSidetoneSource.cs  DigitalTxArbiter.cs  DigitalTxStreamer.cs  DisplayIntelligenceSettingsStore.cs  (+127 more)
Zeus.Support.Contracts/: SupportArtifacts.cs  SupportIpc.cs  SupportIpcFraming.cs  SupportIpcJsonContext.cs  Zeus.Support.Contracts.csproj
Zeus.SupportAgent/: BrokerEndpoints.cs  CrashAutoShare.cs  CrashCapture.cs  HttpSupportBrokerClient.cs  IMutableSupportBrokerClient.cs  ISupportBrokerClient.cs  LogTail.cs  PresenceClient.cs  PresenceCoordinator.cs  ProcessSupervisor.cs  Program.cs  SidecarOptions.cs  SupportIpcListener.cs  Zeus.SupportAgent.csproj
Zeus.VirtualRadio/: BoardProtocolSupport.cs  DecodedHostCommand.cs  HostCommandState.cs  IVirtualRadio.cs  ProtocolVersion.cs  VirtualRadioProfile.cs  VirtualRadioStatus.cs  Zeus.VirtualRadio.csproj
Zeus.VirtualRadio.Host/: Program.cs  Zeus.VirtualRadio.Host.csproj
cloud/: ADMIN_AUTH_DESIGN.md
docs/: INSTALLATION.md  RELEASE.md  tci-test-plan.md
installers/: .gitignore  create-linux-desktop-appimage.sh  create-linux-package.sh  create-macos-app.sh  linux-zeus-preflight.sh  zeus-macos.entitlements  zeus-windows.iss
native/: README.md  build.sh
native/codec2/: .gitignore  CMakeLists.txt  VENDORING.md  patch-codec2-msvc.cmake
native/radae/: CMakeLists.txt  VENDORING.md
native/radae/shim/: build_test_wsl.sh  zeus_rade.c  zeus_rade.h  zeus_rade_test.c
native/radae/shim/compat/: alloca.h
native/wspr/: CMakeLists.txt  README.md  zeus_wspr.c  zeus_wspr.h
native/wspr/test/: zeus_wspr_roundtrip.c  zeus_wspr_selftest.c
native/zeus-au-bridge/: CMakeLists.txt
native/zeus-au-bridge/include/: zau.h
native/zeus-au-bridge/src/: bridge.mm
scripts/: check-against-develop.cmd  check-against-develop.ps1  cleanup-merged-worktrees.ps1  export-pr.ps1  finish-work.ps1  launch-zeus-desktop-hidden.vbs  launch-zeus-desktop.cmd  rebuild-zeus-desktop.cmd  start-local-dev.ps1  start-work.ps1  take-work.ps1
tools/: audit-wdsp-runtime-artifacts.ps1  capture-dsp-puresignal-bench-trace.ps1  capture-g2-frontend-rx-leveler-ab.ps1  capture-rx-leveler-ab.ps1  capture-tx-output-headroom-ab.ps1  compare-dsp-live-diagnostics-traces.ps1  new-dsp-artifact-manifest.ps1  run-dsp-g2-rx-peak-hunt.ps1  run-dsp-live-acceptance-cycle.ps1  run-dsp-wdsp-fixture-matrix.ps1  (+17 more)
(+2057 files in other folders)
